# PCSC2017_Group5

./: AbstractNumericalApproximation.cpp  AbstractNumericalApproximation.h  CMakeLists.txt  DFT.cpp  DFT.h  DivMat.cpp  DivMat.h  FFT.cpp  FFT.h  FFTreal.cpp  FFTreal.h  FFTtest.cpp  FourierApproximation.cpp  FourierApproximation.h  Graph.cpp  Graph.h  Lagrange.cpp  Lagrange.h  LeastSquare.cpp  LeastSquare.h  LeastSquares.cpp  LeastSquares.h  MultMat.cpp  MultMat.h  PieceWiseContinuePolynomial.cpp  PieceWiseContinuePolynomial.h  PieceWise_Continue_Polynomial.cpp  PieceWise_Continue_Polynomial.h  PieceWise_NonContinue_Polynomial.cpp  PieceWise_NonContinue_Polynomial.h  Point.cpp  Point.h  Polynomial.cpp  Polynomial.h  README.md  Test.cpp  Test.h  gnuplot_i.cpp  gnuplot_i.hpp  height_weight_genders.txt  (+8 more)
doc/: Doxyfile
doc/html/: _abstract_numerical_approximation_8cpp.html  _abstract_numerical_approximation_8cpp_source.html  _abstract_numerical_approximation_8h_source.html  _f_f_treal_8cpp.html  _f_f_treal_8cpp_source.html  _f_f_treal_8h_source.html  _f_f_ttest_8cpp.html  _f_f_ttest_8cpp_source.html  _fourier_transforms.html  _graph_8cpp.html  _graph_8cpp_source.html  _graph_8h_source.html  _lagrange_8cpp.html  _lagrange_8cpp_source.html  _lagrange_8h.html  _lagrange_8h_source.html  _lagrange_polynomial.html  _least_square_8cpp.html  _least_square_8cpp_source.html  _least_square_8h.html  _least_square_8h_source.html  _piece_wise___continue___polynomial_8cpp.html  _piece_wise___continue___polynomial_8cpp_source.html  _piece_wise___continue___polynomial_8h.html  _piece_wise___continue___polynomial_8h_source.html  _piece_wise_continue_polynomial_8cpp.html  _piece_wise_continue_polynomial_8cpp_source.html  _piece_wise_continue_polynomial_8h_source.html  _point_8cpp_source.html  _point_8h.html  _point_8h_source.html  _polynomial_8cpp.html  _polynomial_8cpp_source.html  (+66 more)
(+96 files in other folders)
